Use past tense in the last paragraph.

--- a/index.htm
+++ b/index.htm
@@ -60,7 +60,7 @@
 <div class="speaker" id="John-Bercow-11">John Bercow (Mr Speaker)
 <p>No, no, Mr Blackford. Order, order.</p>
 <p>Under the power given to me by Standing Order No. 43, in light of the persistent and repeated refusal of the right hon. Member for Ross, Skye and Lochaber (Ian Blackford) to resume his seat when so instructed, I order the right hon. Gentleman to withdraw immediately from the House for the remainder of this day's sitting.</p>
-<p>The Speaker order Mr Blackford, Member for Ross, Skye and Lochaber, to withdraw immediately from the House during the remainder of the day's sitting (Standing Order No. 43), and the Member withdrew accordingly.</p></div>
+<p>The Speaker ordered Mr Blackford, Member for Ross, Skye and Lochaber, to withdraw immediately from the House during the remainder of the day's sitting (Standing Order No. 43), and the Member withdrew accordingly.</p></div>
 <div class="speaker" id="John-Bercow-12">John Bercow (Mr Speaker)
 <p>Order. [Interruption.] Order! Mr Jayawardena, you are a very jocular fellow, but you are a little over-excitable today. Calm! There is a long time to go. [Interruption.] Order. I say only to the House, what a pity that the Scottish National Party Members have left the Chamber, because some of them have questions on the Order Paper, and, as colleagues know, I always like to get to the end of the Order Paper. They would have had their chance, and they have lost that chance by their own choice.</p>
 <p>I call Mr Luke Hall.</p></div>
